[package]
name = "pilvi-backend-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.14", features = ["http2", "headers"] }
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
axum-macros = "0.3.7"

hyper = "0.14.25"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }

tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.7", features = ["io"] }
futures = "0.3.28"

lazy_static = "1.4.0"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"