[package]
name = "pithos"
version = "0.2.0"
edition = "2021"
description = "A simple, fast, and secure object storage service"
license = "MIT"
repository = "https://github.com/bluelhf/pithos"
keywords = ["file", "storage", "gcs", "backend"]
categories = ["web-programming", "network-programming"]

[dependencies]
axum = { version = "0.6.14", features = ["http2", "headers", "macros"] }
axum-server = { version = "0.5.0", features = ["tls-rustls"] }

hyper = "0.14.25"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }

tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.7", features = ["io"] }
futures = "0.3.28"

lazy_static = "1.4.0"
uuid = { version = "1.3.1", features = ["v4", "serde"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

async-trait = "0.1.68"
hyper-rustls = { version = "0.24.0", features = ["http2"] }
bytes = "1.4.0"
urlencoding = "2.1.2"
axum-client-ip = "0.4.1"
serde = { version = "1.0.166", features = ["derive"] }
google-cloud-storage = "0.12.0"
toml = { version = "0.7.5", features = ["parse"], default-features = false }
serde_json = "1.0.99"
axum-signed-urls = "0.1.1"
dotenv = "0.15.0"
